kubernetes/apps/grafana/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: grafana
    labels:
        name: grafana
