kubernetes/apps/grafana/grafana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: grafana
    name: grafana
    namespace: grafana
spec:
    selector:
        matchLabels:
            app: grafana
    template:
        metadata:
            labels:
                app: grafana
        spec:
            securityContext:
                fsGroup: 472
                supplementalGroups:
                    - 0
            containers:
                - name: grafana
                  image: grafana/grafana:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 3000
                        name: http-grafana
                        protocol: TCP
                  readinessProbe:
                      failureThreshold: 3
                      httpGet:
                          path: /robots.txt
                          port: 3000
                          scheme: HTTP
                      initialDelaySeconds: 10
                      periodSeconds: 30
                      successThreshold: 1
                      timeoutSeconds: 2
                  livenessProbe:
                      failureThreshold: 3
                      initialDelaySeconds: 30
                      periodSeconds: 10
                      successThreshold: 1
                      tcpSocket:
                          port: 3000
                      timeoutSeconds: 1
                  resources:
                      requests:
                          cpu: 250m
                          memory: 750Mi
                  volumeMounts:
                      - mountPath: /var/lib/grafana
                        name: grafana-pv
                      - name: dashboards
                        mountPath: /var/lib/grafana/dashboards
                      - name: provisioning
                        mountPath: /etc/grafana/provisioning/dashboards
                  volumes:
                      - name: grafana-pv
                        persistentVolumeClaim:
                            claimName: grafana-pvc
                      - name: provisioning
                        configMap:
                            name: grafana-provisioning
                      - name: dashboards
                        configMap:
                            name: grafana-dashboards

---
apiVersion: v1
kind: Service
metadata:
    name: grafana
    namespace: grafana
spec:
    ports:
        - port: 3000
          protocol: TCP
          targetPort: http-grafana
    selector:
        app: grafana
    sessionAffinity: None
    type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: grafana
    namespace: grafana
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
    ingressClassName: traefik
    rules:
        - host: grafana.clem-ops.org
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: grafana
                            port:
                                number: 3000
